Fix some sizing on mobile devices

--- a/web/kgg_data/kgg_style.css
+++ b/web/kgg_data/kgg_style.css
@@ -69,19 +69,20 @@ div.connecting-icon-container-inner svg {
 }
 
 .mobtitle {
-    font-size: 255px;
+    font-size: 500%;
+    text-align: center;
     color: white;
 }
 
 .mobsubtitle {
-    font-size: 100px;
+    font-size: 200%;
+    text-align: center;
     color: white;
 }
 
 .mobinfo {
     position: absolute;
-    text-align: center;
-    top: 0px;
+    bottom: 2%;
     color: white;
 }
 
